# buildout.website

./: .dockerignore  .editorconfig  .envrc  .gitignore  CHANGES.rst  CHANGES.txt  Dockerfile  Dockerfile-dev  Dockerfile.cleanup  Dockerfile.dev  Dockerfile.migration  Dockerfile.migrationtransmo  Dockerfile.transmo  INSTALL.rst  INSTALL.txt  INSTALL_fr.txt  Jenkinsfile  LICENSE  Makefile  README.rst  README.txt  ZPsycopgDA_2013.tgz  ZPsycopgDA_206.tgz  ath.cfg  backup.cfg  base.cfg  booking.cfg  bootstrap.sh  buildout.cfg  cpskin3.cfg  dev.cfg  diazo.cfg  docker-compose.yml  docker-dev.cfg  docker-entrypoint.sh  docker.cfg  extra.cfg  imio.cfg  migration.cfg  migration.py  (+36 more)
.github/workflows/: docker-image.yml  prod.yml  staging.yml
Extensions/: test.py
debian/: README.Debian  README.source  changelog  control  copyright  imio-website-core.dirs  imio-website-core.postinst  imio-website-core.prerm  imio-website-instance  imio-website-instance.init  imio-website-instance.postinst  imio-website-zeoserver.init  imio-website-zeoserver.postinst  prerm  rules
doc/: 4-4
doc/sphinx/: Makefile
doc/sphinx/source/: conf.py  index.rst
patches/: ramcache.py
products/: EXTERNALS.txt
scripts/: add-newsletter-subscribers.py  autopublish.py  citizen_cleanup.py  config.py  get_releases_from_github.py  install-plugin.py  migrate-todx-with-transmo.py  rsync.py  set_default_skin.py  start_last_theme_upgrade_step.py  unicode-error-archetypes.py
src/: EXTERNALS.txt
tests/: locustfile.py  requirements.txt  test_starting.py
var/: svn.ignore
(+18 files in other folders)
