[tool.poetry]
name = "buildout.website"
version = "0.1.0"
description = ""
authors = ["Jean-François Roche <jfroche@affinitic.be>"]

[tool.poetry.dependencies]
python = "^3.8"
awscli = "^1.18.153"
awscli-plugin-endpoint = "^0.4"
python-openstackclient = "^5.4.0"
pbr =">=3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12", "pbr>=3.0"]
build-backend = "poetry.masonry.api"
